--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,7 @@ dependencies = [
 ]
 requires-python = ">=3.10"
 description = "Expand your vocabulary with wordsea!"
+
+[project.scripts]
+wordsea = "wordsea:main"
+wordsea-clean = "wordsea.dictionary.clean:main"
