gen: add parsing file with words as an argument, add checking if response has correct format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "accelerate",
     "beautifulsoup4",
     "diffusers",
+    "jsonschema",
     "pandas",
     "peft",
     "sentencepiece",
