gen: add generate and imagine as library tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,5 @@ description = "Expand your vocabulary with wordsea!"
 wordsea = "wordsea:main"
 wordsea-clean = "wordsea.scripts.clean:main"
 wordsea-find = "wordsea.scripts.find:main"
+wordsea-generate = "wordsea.scripts.generate:main"
+wordsea-imagine = "wordsea.scripts.imagine:main"
