gen: add worflow for generating images from words (#2)
* gen: add worflow for generating images from words

* gen: add parsing file with words as an argument, add checking if response has correct format

* gen: move pipelines definiton, sort imports

* gen: add environment variable for api url

* fix: add filtering empty lines from files with words

* gen: add generate and imagine as library tools

* style: add tox.ini and fix errors

* refactor: organize logged files

---------

Co-authored-by: Anna Klimiuk <ania.klimiuk411@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,16 @@ dependencies = [
     "accelerate",
     "beautifulsoup4",
     "diffusers",
+    "jinja2",
+    "jsonschema",
     "pandas",
     "peft",
+    "requests",
     "sentencepiece",
     "tqdm",
     "torch",
     "transformers",
+    "types-requests",
 ]
 requires-python = ">=3.10"
 description = "Expand your vocabulary with wordsea!"
@@ -27,3 +31,24 @@ description = "Expand your vocabulary with wordsea!"
 wordsea = "wordsea:main"
 wordsea-clean = "wordsea.scripts.clean:main"
 wordsea-find = "wordsea.scripts.find:main"
+wordsea-generate = "wordsea.scripts.generate:main"
+wordsea-imagine = "wordsea.scripts.imagine:main"
+
+[tool.black]
+line-length = 88
+include_trailing_comma = true
+
+[tool.isort]
+profile = 'black'
+
+[tool.mypy]
+disallow_untyped_calls = false
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+
+show_error_codes = true
+enable_error_code = ["ignore-without-code"]
+ignore_missing_imports = true
+strict_optional = false
+warn_return_any = false
+allow_redefinition = true
