--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,22 @@
 [tox]
 requires = tox>4
-env_list = black, mypy, flake8
+env_list = ruff, mypy
 isolated_build = true
-
-[flake8]
-max-line-length = 120
-exclude = 
-    .git,
-    __pycache__,
-    .tox,
-    .mypy_cache,
 
 [testenv]
 skip_install = true
 
-[testenv:flake8]
-description = Run flake8 code linter
-deps = 
-    flake8==7.0.0
-    flake8-bugbear==24.1.17
-    flake8-comprehensions==3.14.0
-    flake8-isort==6.1.1
-    flake8-requirements==2.0.1
-    flake8-use-pathlib==0.3.0
-commands = flake8 wordsea
-
-[testenv:black]
-description = Run black code formatter
-deps = black==23.12.1
-commands = black --check wordsea
+[testenv:ruff]
+description = run ruff
+deps = ruff
+commands = 
+    ruff format wordsea
+    ruff check wordsea --fix
 
 [testenv:mypy]
-description = Run mypy static type checker
+description = run mypy
 deps = 
     .
     mypy==1.8.0
-commands = mypy wordsea
-
-
-
-
-
-
+commands =
+    mypy --install-types --non-interactive wordsea
