--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@svelte-put/clickoutside": "^3.0.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.0.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "8.56.0",
