--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,8 @@
 MONGODB_URL=mongodb://mongo:27017/
 MONGODB_DB_NAME=wordsea
 
+PUBLIC_FRONT_WORD=
+PUBLIC_FRONT_WORD_IMAGE=
 
 PUBLIC_TYPESENSE_INDEX=words
 PUBLIC_TYPESENSE_SEARCH_ONLY_API_KEY=xyz
